Add gh-pages deployment depencencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-palette",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://walkccc.github.io/react-palette",
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
@@ -19,6 +20,8 @@
     "react-sortable-hoc": "^1.10.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
